--- a/index.html
+++ b/index.html
@@ -86,11 +86,24 @@
                                         </ul>
                                     </li>
 
+
                                     <li>
                                         <a class="page-scroll" href="#blog">Blog</a>
                                     </li>
                                     <li>
                                         <a class="page-scroll" href="#contact">Contact</a>
+                                    </li>
+                                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                            <img src="img/carrito/shopping-cart (2).png" width="30px" height="30px">
+                                            <span class="caret"></span>
+                                        </a>
+                                        <ul class="dropdown-menu" role="menu">
+                                            <li><a href=#>Drop Down 1</a></li>
+                                            <li><a href=#>Drop Down 2</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a class="page-scroll" href="#logeo">logearme</a>
                                     </li>
                                 </ul>
                             </div>
@@ -491,11 +504,12 @@
 
                     <!-- Start Google Map -->
                     <div class="col-md-6 col-sm-6 col-xs-12">
-                        <!-- Start Map -->
+                        <!-- Start Map 
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452"
                             width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
-                        <!-- End Map -->
+                        End Map -->
+                        <div id="map"></div>
                     </div>
                     <!-- End Google Map -->
 
@@ -618,14 +632,7 @@
                                 &copy; Copyright <strong>eBusiness</strong>. All Rights Reserved
                             </p>
                         </div>
-                        <div class="credits">
-                            <!--
-                    All the links in the footer should remain intact.
-                    You can delete the links only if you purchased the pro version.
-                    Licensing information: https://bootstrapmade.com/license/
-                    Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=eBusiness
-                  -->
-                            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                        <div class="credits"> Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
                         </div>
                     </div>
                 </div>
@@ -658,19 +665,9 @@
 
 
     <script src="js/main.js"></script>
-
-    <script>
-        $("#menu-toggle").click(function (e) {
-            e.preventDefault();
-            $("#wrapper").toggleClass("toggled");
-        });
-
-        $(document).on('click', '.menu-has-children i', function (e) {
-            $(this).next().toggleClass('menu-item-active');
-            $(this).nextAll('ul').eq(0).slideToggle();
-            $(this).toggleClass("fa-chevron-up fa-chevron-down");
-        });
-    </script>
+    <script src="js/script.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDkAe1kWy0MJLRxYgRQK-qb5ZScX80sVg&callback=initMap"
+    async defer></script>
 </body>
 
 </html>
